--- a/sa-ui/src/App.css
+++ b/sa-ui/src/App.css
@@ -1,32 +1,43 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-header {
+  background: linear-gradient(to right, rgba(147,0,0,1) 0%, rgba(147,0,0,1) 52%,
+  rgba(130,6,5,1) 61%, rgba(98,17,15,1) 78%, rgba(56,31,27,1) 100%);
+  height: 70px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  box-shadow: 0 0 10px 2px grey;
 }
 
-.App-link {
-  color: #61dafb;
+
+.app-footer {
+  position: fixed;
+  bottom: 0;
+  height: 45px;
+  width: 100%;
+  background-color: #282c34;
+  color: white;
+  padding: 15px;
+  box-shadow: 1px -2px 10px grey;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-footer div {
+  margin: 15px;
+  width: 30%;
+  float: left;
+  font-size: 18px;
+  font-weight: bold;
+
+}
+.middle {
+  text-align: center;
+}
+
+.right {
+  text-align: right;
+}
+
+.header-text {
+  padding: 15px;
 }
