--- a/sa-ui/src/App.css
+++ b/sa-ui/src/App.css
@@ -14,7 +14,7 @@
 .app-footer {
   position: fixed;
   bottom: 0;
-  height: 45px;
+  height: 75px;
   width: 100%;
   background-color: #282c34;
   color: white;
@@ -22,10 +22,16 @@
   box-shadow: 1px -2px 10px grey;
 }
 
+.left {
+  float:left;
+}
+
+.right {
+  float: right;
+}
+
 .app-footer div {
   margin: 15px;
-  width: 30%;
-  float: left;
   font-size: 18px;
   font-weight: bold;
 
@@ -34,10 +40,19 @@
   text-align: center;
 }
 
-.right {
-  text-align: right;
-}
-
 .header-text {
   padding: 15px;
+}
+
+main {
+  height: 95%;
+  margin:15px;
+}
+
+.introduction .title{
+  text-align: center;
+}
+
+.introduction {
+  text-align: center;
 }
