--- a/sa-ui/src/searchbox/search.css
+++ b/sa-ui/src/searchbox/search.css
@@ -7,9 +7,8 @@
 }
 
 .compare-icon {
-    font-size: 24px;
-    width: 100px;
-    margin-left: 49%;
+    font-size: 16px;
+    margin-left: 42%;
 }
 
 .compare-btn {
@@ -22,4 +21,12 @@
 .compare-btn:hover {
     opacity: 0.6;
     color: white;
+}
+
+.select-label {
+    margin-right: 5px;
+}
+
+.select-box {
+    margin-right: 10px;
 }
